made some changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
     <title>Personal Portfolio</title>
 </head>
 
@@ -21,7 +21,7 @@
 </li>
  </ul>
     </nav>
-   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  
 </body>
    
 <section id="welcome-section"
@@ -50,13 +50,13 @@
     </p>
   </a>
   <a
-  href="https://github.com/jeremiahbradshaw"
+  href="/starwars.html"
   target="_blank"
   class="project project-tile"
 >
   <img
     class="project-image"
-    src="https://www.biography.com/.image/t_share/MTQ1MjM0MDkwOTQ0MTEyMDk3/lon-chaney-jr---the-wolfman.jpg"
+    src="http://3.bp.blogspot.com/-4XsFg3a4R0E/TvYBb5jNbYI/AAAAAAAAEHo/nht6q6jDZro/s1600/Star-Wars-Holiday-Special.jpg"
     alt="project"
   />
   <p class="project-title">
