--- a/starwars.html
+++ b/starwars.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="/styles/starwars-style.css" rel="stylesheet">
-    <title>Star Wars</title>
+    <title>Star Wars Page</title>
 </head>
 <body>
     <header></header>
