--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div id="projects-grid">
    
     <a
-    href="https://github.com/jeremiahbradshaw"
+    href="pokemon.html"
     target="_blank"
     class="project project-tile"
   >
