--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
 <section id="contact">
-    <h1>Click on me</h1>
+    <h1>Click to see my Github</h1>
     
  <div id="profile-image">
      <a id="profile-link" 
