new pattern for button

--- a/starwars.html
+++ b/starwars.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <header></header>
+    <button></button>
+    <script type="module" src="./js/starwars.js"></script>
     <main>
-            <script type="module" src="./js/starwars.js"></script>
+            
     </main>
     
 </body>
