--- a/starwars.html
+++ b/starwars.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header></header>
-    <button></button>
+    <button id="male">Male</button>
+    <button id="female">Female</button>
+    <div id="starwars"></div>
     <script type="module" src="./js/starwars.js"></script>
     <main>
             
