--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
    
   </p>
 </a>
+<a
+href="/pokemon.html"
+target="_blank"
+class="project project-tile"
+>
+<img
+  class="project-image"
+  src="http://3.bp.blogspot.com/-FWXcZYqh4Ao/UvTGdaUClII/AAAAAAAAADQ/BwmwimEq_nk/s1600/pikachu+largo.png"
+  alt="project"
+/>
+<p class="project-title">
+ 
+</p>
+</a>
 </div>
 </section>
 
