--- a/starwars.html
+++ b/starwars.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     <header></header>
+    <button id="gender">All</button>
     <button id="male">Male</button>
     <button id="female">Female</button>
+    <button id="n/a">N/A</button> 
+
     <div id="starwars"></div>
     <script type="module" src="./js/starwars.js"></script>
     <main>
