--- a/starwars.html
+++ b/starwars.html
@@ -9,15 +9,19 @@
 </head>
 <body>
     <header></header>
+    <div id="starwarsheader">
+       <h1> Star Wars Gender Picker Extreme</h1>
+    </div>
+    <div id="divbutton">
     <button id="gender">All</button>
     <button id="male">Male</button>
     <button id="female">Female</button>
     <button id="n/a">N/A</button> 
-
+    </div>
     <div id="starwars"></div>
     <script type="module" src="./js/starwars.js"></script>
     <main>
-            
+
     </main>
     
 </body>
