made changes to images

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <link href="styles/style.css" rel="stylesheet">
+ 
     <title>Personal Portfolio Page</title>
 </head>
 
@@ -86,11 +87,11 @@ class="project project-tile"
     <h1>Click to see my Github</h1>
     
  <div id="profile-image">
-     <a id="profile-link" 
+ <a id="profile-link" 
         href="https://github.com/jeremiahbradshaw" 
         target="_blank" 
      >
-        <img src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/14956386_1803747113176690_1741299112098364926_n.jpg?_nc_cat=108&_nc_oc=AQm4r9mGv71slOTWKQzaGfFIaLYYUo_aM0kZRv3CIY5xIjUX04KrtFR7PnxSVcsZoE4&_nc_ht=scontent-dfw5-1.xx&oh=9872e1d286dd4343b7d1f2a117eec802&oe=5E3BC4DA">
+        <img class="mephoto" src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/14956386_1803747113176690_1741299112098364926_n.jpg?_nc_cat=108&_nc_oc=AQm4r9mGv71slOTWKQzaGfFIaLYYUo_aM0kZRv3CIY5xIjUX04KrtFR7PnxSVcsZoE4&_nc_ht=scontent-dfw5-1.xx&oh=9872e1d286dd4343b7d1f2a117eec802&oe=5E3BC4DA">
         </a>
 </div> 
 </section>
