moved some things around

--- a/pokemon.html
+++ b/pokemon.html
@@ -15,7 +15,7 @@
           
             <img id="pokemonpic" src="assets/Pokemon-PNG.png" alt="pokemon-logo">
         </section>    
-        <section id="buttonsec"><button id = "pokeButton">New Pokemon</button></section>  
+        <section id="buttonsec"><h2>click the button to call them all</h2><button id = "pokeButton">New Pokemon</button></section>  
     <main>
             
             <script type="module" src="./js/pokemon.js"></script>
